src/dotnet/Chat.UI.Blazor/Components/ChatAudioPanel/chat-audio-panel.css
/* ChatAudioPanel */
.chat-audio-panel {
    @apply flex-x;
    @apply justify-center;
    @apply rounded-none outline-none;
    @apply bg-01;
}
/* ChatAudioPanel, Mobile view */
.narrow .chat-audio-panel {
    @apply self-stretch items-center;
    @apply gap-x-6;
    @apply py-2 mb-0.5;
    @apply rounded-b-4xl;
    background: linear-gradient(to top, rgba(255,255,255,1) 5%, rgba(255,255,255,1) 35%, transparent);
}
/* ChatAudioPanel, Mobile view, Text mode */
.narrow-panel.narrow .chat-audio-panel {
    @apply gap-x-2;
    @apply py-2;
    background: linear-gradient(to top, rgba(255,255,255,1) 60%, rgba(255,255,255,1) 5%, transparent);
}
/* ChatAudioPanel, Desktop view */
.wide .chat-audio-panel {
    @apply h-12;
    @apply self-end items-end;
    @apply gap-x-2.5;
}

/* Buttons */
.chat-audio-panel .btn.btn-round .btn-content {
    @apply rounded-full;
    @apply bg-03;
}
.chat-audio-panel .record-off-btn.btn .btn-content,
body.hoverable .chat-audio-panel .record-off-btn.btn:hover .btn-content {
    @apply bg-gradient-to-b from-primary to-[#B60B84];
    @apply text-04;
}
.chat-audio-panel .record-on-btn.btn .btn-content,
body.hoverable .chat-audio-panel .record-on-btn.btn:hover .btn-content {
    @apply bg-[#FF3880];
    @apply text-04;
}
.chat-audio-panel .language-button,
.chat-audio-panel .playback-wrapper,
.chat-audio-panel .recorder-wrapper,
.chat-audio-panel .recorder-button {
    @apply rounded-full;
    @apply transition-all ease-linear duration-100;
}
.chat-audio-panel .recorder-wrapper {
    @apply border;
}
.chat-audio-panel .recorder-wrapper.applying-changes {
    @apply opacity-50;
}
.recorder-wrapper .recorder-icon {
    @apply h-10 w-10;
}
.recorder-wrapper .mic-disabled.btn .btn-content,
body.hoverable .recorder-wrapper .mic-disabled.btn:hover .btn-content {
    @apply bg-icons-02;
}
.recorder-wrapper:has(.mic-disabled) {
    @apply border-icons-02;
}

.narrow-panel.narrow .recorder-wrapper .recorder-icon,
.wide .recorder-wrapper .recorder-icon {
    @apply h-7 w-7;
}
.chat-audio-panel .recorder-wrapper.record-off,
.chat-audio-panel .recorder-wrapper.record-on-to-off {
    @apply rounded-full;
    @apply border border-double border-transparent;
    background-image: linear-gradient(white, white), linear-gradient(to bottom, #2970FF, #C60077);
    background-origin: border-box;
    background-clip: padding-box, border-box;
    @apply transition-all ease-linear duration-300;
}
.chat-audio-panel .recorder-wrapper.record-on,
.chat-audio-panel .recorder-wrapper.record-off-to-on {
    @apply border-[#FF3880];
}
.chat-audio-panel .recorder-wrapper .btn {
    @apply absolute;
    @apply transition-all ease-in-out duration-300;
}

/* Buttons, Mobile view */
.narrow .chat-audio-panel .btn.btn-round .btn-content {
    @apply min-h-12 max-h-12 min-w-12 max-w-12;
}
.narrow .chat-audio-panel .language-button,
.narrow .chat-audio-panel .playback-wrapper,
.narrow .chat-audio-panel .recorder-wrapper {
    @apply drop-shadow-lg shadow-gradient-stop-02;
}
.narrow .chat-audio-panel .language-button:active,
.narrow .chat-audio-panel .playback-wrapper:active,
.narrow .chat-audio-panel .recorder-button:active {
    @apply translate-y-0.5;
}
.narrow .chat-audio-panel .btn.chat-language-toggle {
    @apply text-primary;
}
.narrow .chat-audio-panel .btn.btn-round.chat-language-toggle .btn-content,
.narrow .chat-audio-panel .playback-wrapper {
    background: linear-gradient(to bottom, var(--gradient-stop-02) 0%, var(--gradient-stop-01) 71.35%);
}
.narrow .chat-audio-panel .playback-wrapper .btn.btn-round .btn-content {
    @apply bg-transparent;
}
.narrow .chat-audio-panel .recorder-wrapper {
    @apply flex;
    @apply h-20 w-20;
    @apply justify-center;
}
.narrow .chat-audio-panel .recorder-wrapper:active {
    @apply translate-y-0;
}
.narrow .chat-audio-panel .recorder-wrapper .btn {
    @apply self-center;
}
.narrow .chat-audio-panel .recorder-wrapper .btn .btn-content {
    @apply min-w-17 max-w-17 min-h-17 max-h-17;
    @apply text-04;
}
.narrow .chat-audio-panel .recorder-button .btn.recorder-skeleton .btn-content {
    @apply min-w-20 min-h-20;
}

/* Temporarily disabled switch between loud speaker and earpiece
   to have single audio channel controlled with volume buttons
*/
/*
.narrow .chat-audio-panel .playback-button {
    @apply w-24;
    @apply -mr-12;
}
.narrow .chat-audio-panel .playback-button .playback-wrapper {
    @apply relative flex-x;
    @apply h-12;
    @apply bg-03;
}
.narrow .chat-audio-panel .playback-button .playback-wrapper .btn.btn-round {
    @apply absolute;
}
.narrow .playback-wrapper .loud-btn {
    @apply self-center;
}
.narrow .playback-wrapper.listen-on {
    @apply w-24;
}
.narrow .playback-wrapper.listen-on .loud-btn.btn.btn-round {
    @apply opacity-100;
    @apply translate-x-12;
}
.narrow .playback-wrapper.listen-off {
    @apply w-12;
}
.narrow .playback-wrapper.listen-off .loud-btn.btn.btn-round {
    @apply absolute;
    @apply opacity-0;
    @apply translate-x-12;
}
.narrow .playback-wrapper.listen-on-to-off {
    @apply w-12;
    @apply animate-width-full-to-half;
}
.narrow .playback-wrapper.listen-on-to-off .loud-btn.btn.btn-round {
    @apply absolute;
    @apply opacity-0;
    @apply scale-0;
    @apply animate-loud-hide;
    @apply transition duration-300;
}
.narrow .playback-wrapper.listen-off-to-on {
    @apply w-24;
    @apply animate-width-half-to-full;
}
.narrow .playback-wrapper.listen-off-to-on .loud-btn.btn.btn-round {
    @apply absolute;
    @apply translate-x-12;
    @apply animate-loud-show;
}
*/

/* Buttons, Mobile view, Text mode */
.narrow-panel.narrow .chat-audio-panel .btn.btn-round .btn-content {
    @apply min-w-20 max-w-20 min-h-12 max-h-12;
}
.narrow-panel.narrow .chat-audio-panel .btn.btn-round svg {
    @apply h-6 w-6;
}

.narrow-panel.narrow .chat-audio-panel .recorder-wrapper {
    @apply min-w-20 max-w-20 min-h-12 max-h-12;
    @apply border-0;
}
.narrow-panel.narrow .chat-audio-panel .playback-button {
    @apply w-20;
    @apply m-0;
}
.narrow-panel.narrow .chat-audio-panel .playback-button .playback-wrapper {
    @apply h-12;
    @apply bg-03;
}
.narrow-panel.narrow .chat-audio-panel .playback-button .playback-wrapper .btn {
    @apply left-4;
}
.narrow-panel.narrow .chat-audio-panel .playback-button .playback-wrapper .btn.btn-round .btn-content {
    @apply min-w-12 max-w-12;
    @apply bg-transparent;
}
.narrow-panel.narrow .playback-wrapper.listen-on {
    @apply w-28;
}
.narrow-panel.narrow .playback-wrapper.listen-on .loud-btn.btn.btn-round {
    @apply opacity-100;
    @apply translate-x-10;
}
.narrow-panel.narrow .playback-wrapper.listen-off {
    @apply w-20;
}
.narrow-panel.narrow .playback-wrapper.listen-off .loud-btn.btn.btn-round {
    @apply absolute;
    @apply opacity-0;
    @apply translate-x-10;
}
.narrow-panel.narrow .playback-wrapper.listen-on-to-off .loud-btn.btn.btn-round {
    @apply absolute;
    @apply scale-0;
    @apply opacity-0;
    @apply animate-loud-hide-text-mode;
    @apply transition duration-300;
}
.narrow-panel.narrow .playback-wrapper.listen-off-to-on .loud-btn.btn.btn-round {
    @apply absolute;
    @apply animate-loud-show-text-mode;
    @apply translate-x-10;
}

/* Buttons, Desktop view */
.wide .chat-audio-panel .recorder-wrapper {
    @apply relative flex;
    @apply h-14 w-14;
    @apply justify-center;
    @apply top-1;
    @apply rounded-full;
}
.wide .chat-audio-panel .recorder-wrapper .btn {
    @apply self-center;
    @apply m-0.5;
}
.chat-language-toggle.btn {
    @apply font-semibold text-lg text-icons-01 md:text-base;
}
.wide .chat-audio-panel .playback-button {
    @apply w-12;
    @apply rounded-full;
}
.wide .playback-wrapper .loud-btn {
    @apply hidden;
}

/* Recorder button animation */

/* From "off" state */
.chat-audio-panel .recorder-wrapper.record-off .record-on-btn.btn {
    @apply scale-0;
    @apply opacity-0;
}
.chat-audio-panel .recorder-wrapper.record-off .record-off-btn.btn {
    @apply scale-100;
    @apply opacity-100;
}
.chat-audio-panel .recorder-wrapper.record-off-to-on .record-off-btn.btn {
    @apply scale-0;
    @apply opacity-0;
}
.chat-audio-panel .recorder-wrapper.record-off-to-on .record-on-btn.btn {
    @apply scale-100;
    @apply opacity-100;
}

/* From "on" state */
.chat-audio-panel .recorder-wrapper.record-on .record-off-btn.btn {
    @apply scale-0;
    @apply opacity-0;
}
.chat-audio-panel .recorder-wrapper.record-on .record-on-btn.btn {
    @apply scale-100;
    @apply opacity-100;
}
.chat-audio-panel .recorder-wrapper.record-on-to-off .record-on-btn.btn {
    @apply scale-0;
    @apply opacity-0;
}
.chat-audio-panel .recorder-wrapper.record-on-to-off .record-off-btn.btn {
    @apply scale-100;
    @apply opacity-100;
}

.modal-frame.service-modal {
    @apply md:gap-x-0;
    @apply max-w-72;
}
.modal-frame.service-modal .modal-header,
.modal-frame.service-modal .modal-mobile-header {
    @apply hidden;
}
.modal-frame.service-modal .c-text {
    @apply flex-y gap-y-2;
    @apply font-medium text-sm;
}

.narrow .modal-frame.service-modal .c-text {
    @apply font-normal text-base;
}
.narrow .modal-frame.service-modal {
    @apply absolute bottom-8;
    @apply h-auto;
    @apply py-4;
    @apply rounded-lg;
    max-width: calc(100% - 2rem);
}
.narrow .modal-frame.service-modal .dialog-body {
    @apply gap-y-4;
}
.narrow .modal-frame.service-modal .header-icon {
    @apply flex-none flex items-center justify-center;
    @apply w-10 h-10;
    @apply rounded-full;
    background-image: linear-gradient(to bottom, #2970FF, #C60077)
}

